--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <!-- header -->
     <header>
       <div class="logo">
         <a href="/">
-          <img src="/pictures/logo/nomad sketching logo.svg" alt="logo" />
+          <img src="pictures/logo/nomad sketching logo.svg" alt="logo" />
         </a>
       </div>
       <nav>
@@ -66,19 +66,19 @@
         </h3>
         <section class="classification">
           <div>
-            <img src="/pictures/homepage/city_collage 1.svg" />
+            <img src="pictures/homepage/city_collage 1.svg" />
             <div class="info"><p>台灣城市</p></div>
           </div>
           <div>
-            <img src="/pictures/homepage/deform_collage.svg" />
+            <img src="pictures/homepage/deform_collage.svg" />
             <div class="info"><p>畸零地</p></div>
           </div>
           <div>
-            <img src="/pictures/homepage/nature_collage.svg" />
+            <img src="pictures/homepage/nature_collage.svg" />
             <div class="info"><p>自然</p></div>
           </div>
           <div>
-            <img src="/pictures/homepage/others_collage.svg" />
+            <img src="pictures/homepage/others_collage.svg" />
             <div class="info"><p>其它</p></div>
           </div>
         </section>
