change name of image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <div class="logo">
         <a href="/">
-          <img src="pictures/logo/nomad sketching logo.svg" alt="logo" />
+          <img src="pictures/logo/nomad_sketching_logo.svg" alt="logo" />
         </a>
       </div>
       <nav>
