--- a/week 1/assignment 3/index.html
+++ b/week 1/assignment 3/index.html
@@ -326,9 +326,9 @@
         </div>
         <div class="contact">
           <p class="contact_us">聯絡我們</p>
-          <a href="#">instagram</a>
-          <a href="#">facebook</a>
-          <a href="#">youtube</a>
+          <a href="#">Instagram</a>
+          <a href="#">Facebook</a>
+          <a href="#">Youtube</a>
         </div>
       </div>
       <hr />
